# get_news_for_russia

./: .gitignore  Readme.md  get_news.py  pyproject.toml
src/: get_news.py
