[tool.poetry]
name = "get_news"
version = "0.1.0"
description = ""
authors = ["Sirius-Bell <vlad10game@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
newsapi = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
